# python-webassembly

./: 1_stack.py  2_storeload.py  3_locals.py  404.html  4_loops.py  5_.py  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: publish-docs.yaml
completed/: machine.py  rocket.py  wadze.py
docs/: index.md
docs/stylesheets/: extra.css
search/: search_index.json
